Vision Core.css
/* ... */
:root {
  --aside-width: 300px;
  --sidebar-padding: 15px;
  --post-width: 540px;
  --post-padding: 20px;
  --post-vertical-spacing: 15px;
  --post-margin: 20px;

  font-size: 16px;
  line-height: 1.5;
  scroll-padding-top: var(--post-margin);
}

/* Global */

* {
  max-width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
ul,
ol,
#ask_form,
#submit_form {
  margin: var(--post-vertical-spacing) 0;
}

iframe { display: block; }
small { font-size: small; }

a {
  color: rgb(var(--accent));
  text-decoration: none;
}

blockquote {
  padding-left: var(--post-padding);
  border-left: 3px solid rgba(var(--title), 0.07);
}

pre {
  overflow-x: scroll;
  padding: 1ch;

  background-color: rgba(var(--title), 0.1);
  line-height: normal;
}

hr {
  max-width: 20%;
  border: 0;
  border-top: 1px solid rgba(var(--title), 0.1);
  border-bottom: 1px solid transparent;
  margin: var(--post-vertical-spacing) auto;
}

/* Overall layout */

body {
  background-color: rgb(var(--background));
  background-image: linear-gradient(rgba(var(--title), 0.1), rgba(var(--title), 0.1));
  background-position: center;
  background-size: cover;
  background-attachment: fixed;
  color: rgb(var(--title));
  font-family: "Favorit", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
}

.iframe-controls--phone-mobile {
  border-bottom: 1px solid rgba(var(--title), .13);

  background-color: rgb(var(--background));
  background-clip: border-box;
}

#base-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;

  margin: auto;
}

aside {
	position: sticky;
	top: 0;

	width: var(--aside-width);
  margin-left: var(--post-margin);
  padding-bottom: var(--post-margin);
}

aside.secondary {
  position: static;

  margin-left: 0;
  margin-right: var(--post-margin);
}

body.tmblr-iframe-pushdown aside {
  top: 54px;
}

@media (max-width: /* (--aside-width * 2) + --post-width + (--post-margin * 4) = */ 1220px) {
	aside.secondary {
		display: none;
	}
}

@media (max-width: /* --aside-width + --post-width + (--post-margin * 3) = */ 900px) {
  #base-container {
    flex-direction: column;
    align-items: center;
  }
  aside {
    position: static;

    width: var(--post-width);
    padding-bottom: 0;
    margin-left: 0;
  }
  #widget {
    display: none;
  }
}

main {
	min-width: 250px;
	width: var(--post-width);
  padding-bottom: var(--post-margin);
	margin: 0 var(--post-margin);
}

main > h3 {
  margin: 0;
  margin-top: var(--post-margin);

  text-align: center;
  text-shadow: 0 0 1px rgb(var(--background));
}

main > h3:only-child {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 280px;
}

main a {
  color: rgb(var(--title));
  text-decoration: underline;
}

/* Sidebar */

aside > section {
  margin-top: var(--post-margin);
}

/* Blog Card */

#blog-card {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  text-align: center;
  overflow: hidden;

  padding-bottom: var(--sidebar-padding);
  border-radius: 3px;

  background-color: rgb(var(--background));
  box-shadow: 0 0 1px rgba(var(--title), .13);
}

#search {
  position: relative;
  z-index: 1;

  display: flex;
  flex-direction: row;
  align-items: center;
  height: 1rem;
  padding: var(--sidebar-padding);

  color: rgb(var(--accent));
}

#search.overlaps-header {
  color: white;
  background-image: linear-gradient(180deg, rgba(0, 0, 0, .3) 0, rgba(0, 0, 0, .3) 0, rgba(0, 0, 0, .3) 0, transparent);
}

#search[hidden],
body.tmblr-iframe-pushdown #search {
  visibility: hidden;
}

#search::before {
  content: "\EA0B";
  font-family: "optica-icons";
  line-height: 1;
}

#search input,
#search input::placeholder {
  color: inherit;
}

#search input {
  min-width: 0;
  flex-basis: 0;
  flex-grow: 1;
  padding: 0;
  border: none;
  margin: 0;
  margin-left: .75ch;

  background: none;
}

#search input:focus {
  outline: none;
}

#header {
  display: block;
  width: 100%;
}

#header.stretch {
  height: 140px;
  margin-top: calc(-1rem - (var(--sidebar-padding) * 2));

  object-fit: cover;
}

#header.no-stretch {
  box-sizing: border-box;
  height: calc(140px - 1rem - (var(--sidebar-padding) * 2));
  padding: 0 calc(var(--sidebar-padding) * 2);

  object-fit: contain;
}

#avatar {
  height: 64px;
  width: 64px;
  border: 5px solid rgb(var(--background));

  background-color: rgb(var(--background));
}

#avatar.circle {
  border-radius: 64px;
}
#avatar.square {
  border-radius: 6px;
}

#header + #avatar {
  margin-top: -55px;
}

#title {
  padding: 0 var(--sidebar-padding);
  margin-top: .75rem;
  margin-bottom: 0;

  color: rgb(var(--title));
  font-family: var(--title-font);
  font-weight: var(--title-font-weight);
  font-size: 1.25rem;
  overflow-wrap: break-word;
}

#avatar + #title {
  margin-top: 7px;
}

#description {
  padding: 0 var(--sidebar-padding);
  margin-top: .5rem;

  font-size: .875rem;
  overflow-wrap: break-word;
}

#title:empty,
#description:empty {
  display: none;
}

#description p {
  margin: 0;
}

#top-photos {
  --top-photo-width: calc(((var(--aside-width) - 10px) / 3) - 10px);

  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: flex-start;
  overflow-y: hidden;
  height: var(--top-photo-width);
  padding: 0 5px;
  margin-top: var(--sidebar-padding);
}

#top-photos a {
  overflow: hidden;
  height: var(--top-photo-width);
  width: var(--top-photo-width);
  border-radius: 3px;
  margin: 0 5px;
}

#top-photos a img {
  height: 100%;
  width: 100%;

  object-fit: cover;
}

/* Navigation */

nav {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0 var(--sidebar-padding);
  margin-top: var(--sidebar-padding);

  font-size: .875rem;
}

nav a {
  margin: 0.5ch 1ch;

  font-weight: bold;
  overflow-wrap: break-word;
}
/* ... */

